--- a/RunToYou/Base.lproj/LaunchScreen.storyboard
+++ b/RunToYou/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="LuaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="ulX-Wr-egU">
-                                <rect key="frame" x="-29" y="-2" width="434" height="887"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="LuaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="ulX-Wr-egU">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="launchLabel" translatesAutoresizingMaskIntoConstraints="NO" id="KZu-5U-p6g">
+                                <rect key="frame" x="72.666666666666686" y="378.66666666666669" width="248" height="95"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="95" id="VXz-tc-RTt"/>
+                                    <constraint firstAttribute="width" constant="248" id="b40-fD-CY4"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ulX-Wr-egU" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="PYj-GK-HJG"/>
+                            <constraint firstItem="KZu-5U-p6g" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QSX-f5-f7W"/>
+                            <constraint firstAttribute="bottom" secondItem="ulX-Wr-egU" secondAttribute="bottom" id="pfE-2V-eVo"/>
+                            <constraint firstItem="KZu-5U-p6g" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sTw-Gd-nVD"/>
+                            <constraint firstAttribute="trailing" secondItem="ulX-Wr-egU" secondAttribute="trailing" id="z8f-3J-m6J"/>
+                            <constraint firstItem="ulX-Wr-egU" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="zny-yB-l7r"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -31,7 +45,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LuaunchScreen" width="750" height="1624"/>
+        <image name="LuaunchScreen" width="1500" height="3248"/>
+        <image name="launchLabel" width="122.5" height="36.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
